tooling/nargo_cli/tests/snapshots/execution_failure/regression_8175/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to divide by zero
  ┌─ src/main.nr:2:14
  │
2 │     let d = ((false as Field) / (false as Field));
  │              -----------------------------------
  │
  = Call stack:
    1. src/main.nr:2:14

Failed assertion
